<resources>
    <string name="app_name">PMU Igra</string>
    <string name="menu_new_polygon">New Polygon</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>

    <string name="polygon_set_start">Set starting point</string>
    <string name="polygon_set_end">Set ending point</string>
    <string name="polygon_set_hole">Set hole</string>
    <string name="polygon_create_rectangle">Create rectangle</string>
    <string name="polygon_save">Save</string>
    <string name="polygon_cancel">Cancel</string>

    <string name="toast_new_polygon">New polygon.</string>
    <string name="toast_edit_polygon">Editing polygon \"%1$s\".</string>
    <string name="toast_edit_error_polygon">Error opening polygon \"%1$s\".</string>

    <string name="toast_polygon_created">Created polygon with name \"%1$s\".</string>
    <string name="toast_polygon_creation_error">Error while creating polygon \"%1$s\".</string>
    <string name="toast_polygon_cancel">Canceled polygon creation.</string>

    <string name="toast_game_exit">You have exited game</string>
    <string name="toast_game_lost">You loose</string>
    <string name="toast_game_won">You won with time  \"%1$s\".</string>
    <string name="toast_game_no_save">Exiting</string>

    <string name="dialog_new_polygon">Give name to new polygon.</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="pref_max_fps">Max FPS</string>
    <string name="pref_cof">Coefficient of Friction</string>
    <string name="pref_collision_force">Collision Force</string>
    <string name="pref_game_speed">Game speed</string>
    <string name="pref_boost_x">Boos X</string>
    <string name="pref_boost_y">Boost Y</string>

    <string name="preference_file">com.mndev.pmuigra.PREF_FILE</string>
    <string name="save_prefs">Save Preferences</string>
    <string name="restore_default_pref">Restore defaults</string>
    <string name="title_polygon_list">Polygons</string>
    <string name="title_polygon_detail">Polygon statistics</string>
    <string name="dialog_save_score">Enter username to save score</string>

</resources>
